--- a/index.html
+++ b/index.html
@@ -4,74 +4,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sitio dedicado a el bar The Clover de Arroyo Seco, Santa Fe">
+    <meta name="keywords" content="bar, comida, arroyo seco, santa fe, bebida, trago, the clover, cloverbar">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="icon" href="./assets/icons/trebol.png">
     <title>TheClover</title>
 </head>
 
 <body class="container-fluid p-0">
     <header class="w-100">
-        <nav class="navbar navbar-expand-md ">
-            <div class="container-fluid w-100">
-                <a class="navbar-brand" href="#">
-                    <logo><a href="index.html"><img class="logo" src="./assets/images/logo.jpg"
-                                alt="Logo de The Clover Bar"></a></logo>
+        <nav class="navbar navbar-expand-md navbar-light">
+            <div class="container-fluid d-flex justify-content-between align-items-center">
+                <a class="navbar-brand" href="index.html">
+                    <img class="logo" src="./assets/images/logo.jpg" alt="Logo de The Clover Bar">
                 </a>
-                <h2 class="h2Header">The Clover Bar</h2>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li><a href="./pages/nosotros.html">Sobre nosotros</a></li>
-                        <li><a href="./pages/menú.html">Menú</a></li>
-                        <li><a href="./pages/galeria.html">Galería</a></li>
-                        <li><a href="./pages/contacto.html">Contacto</a></li>
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="./pages/nosotros.html">Sobre nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./pages/menú.html">Menú</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./pages/galeria.html">Galería</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./pages/contacto.html">Contacto</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
     <main>
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner col-md-10 h-50 ">
-                <div class="carousel-item active">
-                    <img src="./assets/images/picada-bar.jpeg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/images/pizza-bar.jpeg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/images/papas-bar.jpg" class="d-block w-100" alt="...">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
         <section class="row">
+            <h1 id="h1Primario">The Clover Bar</h1>
+            <h2>Lo mejor de lo mejor lo encontras acá</h2>
             <article class="col-xl-4 col-md-6 col-sm-12">
-                <h2>Lo mejor de lo mejor lo encontras acá</h2>
                 <p>
-                    The Clover Bar Arroyo Seco es el lugar perfecto para quienes buscan una experiencia única en un
+                    The Clover Bar es el lugar perfecto para quienes buscan una experiencia única en un
                     ambiente acogedor. Nos enorgullece ofrecer una amplia selección de bebidas que incluye cervezas
                     artesanales, cócteles clásicos y una variedad de vinos seleccionados. Nuestra carta destaca por las
                     deliciosas picadas y pizzas artesanales, ideales para compartir con amigos o familiares. Cada visita
@@ -87,9 +57,12 @@
                 </p>
             </article>
             <article class="col-xl-4 col-md-6 col-sm-12">
-                <img class="img-fluid object-fit-contain" src="./assets/images/copa-bar.jpeg"
-                    alt="Imagen de una copa en The Clover Bar">
-                <img class="img-fluid object-fit-contain" src="./assets/images/corona-bar.jpeg"
+                <img class="img-fluid object-fit-contain  "
+                    style="margin: 0;margin-top: 20px;box-shadow: 0 10px 20px black; width: 100%;"
+                    src="./assets/images/copa-bar.jpeg" alt="Imagen de una copa en The Clover Bar">
+                <img class="img-fluid object-fit-contain "
+                    style="margin: 0;margin-top: 40px;margin-bottom: 10px;box-shadow: 0 10px 20px black;width: 100%;"
+                    src="./assets/images/corona-bar.jpeg"
                     alt="Imagen de una botella de cerveza Corona en The Clover Bar">
             </article>
             <article class="col-xl-4 col-md-6 col-sm-12">
