--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,21 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sitio dedicado a el bar The Clover de Arroyo Seco, Santa Fe">
+    <meta name="keywords"
+        content="bar, comunicacion, mensaje, arroyo seco, santa fe, ubicacion, contatco, the clover, cloverbar">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="../styles/contacto.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" href="../assets/icons/trebol.png">
-    <title>TheClover</title>
+    <title>TheClover - Contacto</title>
 </head>
 
 <body class="container-fluid p-0">
     <header class="w-100">
-        <nav class="navbar navbar-expand-md ">
-            <div class="container-fluid w-100">
-                <a class="navbar-brand" href="#">
-                    <logo><a href="../index.html"><img class="logo" src="../assets/images/logo.jpg"
-                                alt="Logo de The Clover Bar"></a></logo>
+        <nav class="navbar navbar-expand-md navbar-light">
+            <div class="container-fluid d-flex justify-content-between align-items-center">
+                <a class="navbar-brand" href="../index.html">
+                    <img class="logo" src="../assets/images/logo.jpg" alt="Logo de The Clover Bar">
                 </a>
                 <h2 class="h2Header">The Clover Bar</h2>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -26,11 +27,11 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li><a href="nosotros.html">Sobre nosotros</a></li>
-                        <li><a href="menú.html">Menú</a></li>
-                        <li><a href="galeria.html">Galería</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="nosotros.html">Sobre nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="menú.html">Menú</a></li>
+                        <li class="nav-item"><a class="nav-link" href="galeria.html">Galería</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
             </div>
@@ -42,18 +43,18 @@
             <article class="col-md-6 col-xl-6">
                 <h2>Comunícate con nosotros</h2>
                 <form method="POST">
-                    <label for="nombreYapellido">Nombre y apellido</label><br>
+                    <label for="nombreYapellido">Nombre y apellido:</label><br>
                     <input type="text" name="nombreYapellido" placeholder="NOMBRE Y APELLIDO *" required>
                     <br><br>
-                    <label for="email">Email</label><br>
+                    <label for="email">Email:</label><br>
                     <input type="email" name="email" placeholder="EMAIL *" required>
                     <br><br>
-                    <label for="asunto">Asunto</label><br>
+                    <label for="asunto">Asunto:</label><br>
                     <input type="text" name="asunto" placeholder="ASUNTO *" required>
                     <br><br>
                     <textarea rows="10" cols="40" name="mensaje" placeholder="MENSAJE *" required></textarea>
                     <br><br>
-                    <input class="enviar" type="submit" name="enviar">
+                    <button type="submit" value="enviar">Enviar</button>
                 </form>
             </article>
             <article class="col-md-6 col-xl-6">
@@ -61,11 +62,11 @@
                 <div class="mapa-container">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3340.280776847308!2d-60.515863724321626!3d-33.15425487350828!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b70bc1cf156ec3%3A0xab8ef7dc5ff692b1!2sTHE%20CLOVER%20BAR!5e0!3m2!1ses-419!2sar!4v1717458795014!5m2!1ses-419!2sar"
-                        width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        width="500" height="450" style="border-radius:5px;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </article>
-            
+
         </section>
     </main>
     <footer>
