--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,21 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sitio dedicado a el bar The Clover de Arroyo Seco, Santa Fe">
+    <meta name="keywords"
+        content="bar, imagenes, fotos, galeria, comida, arroyo seco, santa fe, bebida, trago, the clover, cloverbar">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="../styles/galeria.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" href="../assets/icons/trebol.png">
-    <title>TheClover</title>
+    <title>TheClover - Galería</title>
 </head>
 
 <body class="container-fluid p-0">
     <header class="w-100">
-        <nav class="navbar navbar-expand-md ">
-            <div class="container-fluid w-100">
-                <a class="navbar-brand" href="#">
-                    <logo><a href="../index.html"><img class="logo" src="../assets/images/logo.jpg"
-                                alt="Logo de The Clover Bar"></a></logo>
+        <nav class="navbar navbar-expand-md navbar-light">
+            <div class="container-fluid d-flex justify-content-between align-items-center">
+                <a class="navbar-brand" href="../index.html">
+                    <img class="logo" src="../assets/images/logo.jpg" alt="Logo de The Clover Bar">
                 </a>
                 <h2 class="h2Header">The Clover Bar</h2>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -26,11 +27,11 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li><a href="nosotros.html">Sobre nosotros</a></li>
-                        <li><a href="menú.html">Menú</a></li>
-                        <li><a href="galeria.html">Galería</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="nosotros.html">Sobre nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="menú.html">Menú</a></li>
+                        <li class="nav-item"><a class="nav-link" href="galeria.html">Galería</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
             </div>
