--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h1 id="h1Primario">The Clover Bar</h1>
             <h2>Lo mejor de lo mejor lo encontras acá</h2>
             <article class="col-xl-4 col-md-6 col-sm-12">
-                <p>
+                <p class="pIndex">
                     The Clover Bar es el lugar perfecto para quienes buscan una experiencia única en un
                     ambiente acogedor. Nos enorgullece ofrecer una amplia selección de bebidas que incluye cervezas
                     artesanales, cócteles clásicos y una variedad de vinos seleccionados. Nuestra carta destaca por las
@@ -48,7 +48,7 @@
                     a The Clover Bar se convierte en una ocasión especial, gracias a nuestro servicio atento y
                     personalizado.
                 </p>
-                <p>
+                <p class="pIndex">
                     Además de nuestras exquisitas bebidas y comidas, The Clover Bar se caracteriza por su decoración
                     rústica y elegante, que crea un ambiente cálido y relajado. Organizamos eventos temáticos y noches
                     especiales con música en vivo, brindando a nuestros clientes una experiencia memorable en cada
@@ -57,23 +57,21 @@
                 </p>
             </article>
             <article class="col-xl-4 col-md-6 col-sm-12">
-                <img class="img-fluid object-fit-contain  "
-                    style="margin: 0;margin-top: 20px;box-shadow: 0 10px 20px black; width: 100%;"
+                <img class="img-fluid object-fit-contain" style="margin: 0;margin-top: 10px;padding: 20px;"
                     src="./assets/images/copa-bar.jpeg" alt="Imagen de una copa en The Clover Bar">
-                <img class="img-fluid object-fit-contain "
-                    style="margin: 0;margin-top: 40px;margin-bottom: 10px;box-shadow: 0 10px 20px black;width: 100%;"
+                <img class="img-fluid object-fit-contain" style="margin: 0;padding: 20px;"
                     src="./assets/images/corona-bar.jpeg"
                     alt="Imagen de una botella de cerveza Corona en The Clover Bar">
             </article>
             <article class="col-xl-4 col-md-6 col-sm-12">
-                <p>
+                <p class="pIndex">
                     Nuestro compromiso con la calidad se refleja en cada detalle, desde la selección de ingredientes
                     frescos hasta la presentación de cada plato. Nos esforzamos por ofrecer un ambiente donde todos se
                     sientan bienvenidos y puedan disfrutar de momentos inolvidables. En The Clover Bar, creemos que la
                     clave para una gran experiencia radica en combinar excelente comida, bebidas excepcionales y un
                     servicio inigualable.
                 </p>
-                <p>
+                <p class="pIndex">
                     Visítanos en Arroyo Seco y descubre por qué The Clover Bar es el lugar de encuentro preferido por la
                     comunidad. Estamos seguros de que, una vez que pruebes nuestras delicias y disfrutes de nuestro
                     ambiente, volverás una y otra vez. Te esperamos para brindarte lo mejor de lo mejor, aquí en The
