--- a/pages/menú.html
+++ b/pages/menú.html
@@ -72,13 +72,14 @@
             <article class="row">
                 <div class="col-12 col-md-6 col-xl-4">
                     <img class="img-fluid object-fit-contain" width="100%"
-                        style="margin: 0;margin-top: 20px;box-shadow: 0 10px 20px black;"
-                        src="../assets/images/pizza-bar.jpeg" alt="Foto de pizza">
+                        style="margin: 0;margin-top: 10px;padding: 20px;" src="../assets/images/pizza-bar.jpeg"
+                        alt="Foto de pizza">
                     <p> Los ingredientes frescos, como tomates jugosos, albahaca aromática y queso derretido, se
                         destacan en
                         esta presentación. Es el plato perfecto para compartir con amigos y disfrutar de la noche.</p>
                 </div>
                 <div class="col-12 col-md-6 col-xl-4">
+                    <br><br>
                     <h3>Especialidades de la Casa</h3>
                     <p>- Milanesa a la napolitana: una jugosa milanesa de carne o pollo, cubierta con salsa de tomate,
                         jamón, queso y orégano, servida con papas fritas.</p>
@@ -91,8 +92,8 @@
                 </div>
                 <div class="col-12 col-md-6 col-xl-4">
                     <img class="img-fluid object-fit-contain" width="100%"
-                        style="margin: 0;margin-top: 20px;box-shadow: 0 10px 20px black;"
-                        src="../assets/images/picada-bar.jpeg" alt="Foto de picada">
+                        style="margin: 0;margin-top: 10px;padding: 20px;" src="../assets/images/picada-bar.jpeg"
+                        alt="Foto de picada">
                     <p> Incluye una selección quesos finos, embutidos, aceitunas y panes artesanales. La picada es
                         perfecta
                         para acompañar con una
