--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -57,11 +57,11 @@
             </article>
             <article class="nosotrosArticle">
                 <img class="img-fluid object-fit-contain" id="i1" width="100%"
-                    style="margin:0; margin-top: 10px;box-shadow: 0 10px 20px black;"
-                    src="../assets/images/lugar-frente-bar.jpg" alt="Foto de la entrada de The Clover Bar">
-                <img class="img-fluid object-fit-contain" id="i2" width="100%" height="450px"
-                    style="margin:0; margin-top: 20px;margin-bottom: 20px;box-shadow: 0 10px 20px black;"
-                    src="../assets/images/lugar-bar.jpeg" alt="Interior de The Clover Bar">
+                    style="margin: 0;margin-top: 10px;padding: 20px;" src="../assets/images/lugar-frente-bar.jpg"
+                    alt="Foto de la entrada de The Clover Bar">
+                <img class="img-fluid object-fit-contain trebolImg" id="i2" width="100%"
+                    style="margin: 0;margin-bottom: 30px;padding: 20px;" src="../assets/images/logo.jpg"
+                    alt="Logo de The Clover Bar">
             </article>
             <article id="a3" class="nosotrosArticle">
                 <p>
